# Renderer-Learning

./: .gitignore  .gitmodules  README.md
ReEngine/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build_dotnet.bat
ReEngine/Source/: CMakeLists.txt
ReEngine/Source/Core/: Application.h  Build.h
ReEngine/Source/Entrys/: Windows.cpp
ReEngine/Source/Platform/: PlatformMisc.cpp  PlatformMisc.h
ReEngine/Source/Platform/Windows/: WindowsPlatformMisc.cpp  WindowsPlatformMisc.h
ReEngine/cmake/: Basic.cmake  Build.cmake  Git.cmake  Init.cmake  Tools.cmake
ReEngine/cmake/platform/: Platform.cmake  Windows.cmake
ReEngine/config/: AssetSetting.ini  BasePath.ini  BaseSetting.ini  Layout.ini
ReEngine/documents/: TODO.md  roadmap.md
ReEngine/dotnet/DotNetDriver/: .gitignore  DotNetDriver.sln
ReEngine/dotnet/DotNetDriver/BatFiles/: OnPostBuild.bat
ReEngine/dotnet/DotNetDriver/DotNetDriver/: DotNetDriver.csproj  Entry.cs  NativeEntry.cs
ReEngine/resources/materials/: DefaultMat.mat
ReEngine/resources/models/: cube.fbx
ReEngine/src/: .gitignore
ReEngine/src/App/OpenGLTestPlatform/: CMakeLists.txt  OpenGLApp.cpp  OpenGLApp.h  RotationComponent.cpp  RotationComponent.h  TestPipeline.cpp  TestPipeline.h  TestPlatformApp.cpp  TestPlatformApp.h  TestScene.cpp  TestScene.h  main.cpp
ReEngine/src/App/ReEngine/: CMakeLists.txt  main.cpp
ReEngine/src/App/TestApp/: CMakeLists.txt  main.cpp
ReEngine/src/App/TestD3D11/: CMakeLists.txt  D3DApp.cpp  D3DApp.h  main.cpp
ReEngine/src/App/TestOpenGL/: CMakeLists.txt  TestOpenGL_API.h  TestOpenGLd-symbols.cpp  main.cpp
ReEngine/src/Common/: CMakeLists.txt  Common.h  Log.h
ReEngine/src/Editor/Editor/: CMakeLists.txt  EditorContext.cpp  EditorContext.h  EditorLayer.cpp  EditorLayer.h  Editor_API.h
ReEngine/src/Editor/EditorContext/: CMakeLists.txt  EditorContext.cpp  EditorContext.h  EditorContext_API.h  IView.h
ReEngine/src/Editor/GUI/: AssetView.cpp  AssetView.h  CMakeLists.txt  EditorGUI_API.h  EditorGUId-symbols.cpp  EditorMenu.cpp  EditorMenu.h  EditorUI.cpp  EditorUI.h  PropertyView.cpp  PropertyView.h  SceneView.cpp  SceneView.h  WorldOutlineView.cpp  WorldOutlineView.h
ReEngine/src/OpenGL/: CMakeLists.txt  GlfwContext.cpp  GlfwContext.h  OpenGL.cpp
ReEngine/src/Runtime/Assets/: AssetLoader.cpp  AssetLoader.h  Assets_API.h  CMakeLists.txt  ResourceManager.h  ResourcesManager.cpp
ReEngine/src/Runtime/Class/: CMakeLists.txt  Class.h  ClassContext.cpp  ClassContext.h  ClassLib_API.h  ClassMsic.h
ReEngine/src/Runtime/Common/: CMakeLists.txt  Camera.h  Common.h  CommonAssert.h  CommonLib_API.h
ReEngine/src/Runtime/Core/: Application.cpp  Application.h  ApplicationSetting.cpp  ApplicationSetting.h  CMakeLists.txt  Core_API.h  Cored-symbols.cpp
ReEngine/src/Runtime/DotNetAPI/: ApplicationAPI.cpp  ApplicationAPI.h  CMakeLists.txt  DotNetAPI_API.h  DotNetAPId-symbols.cpp  NetLog.h
ReEngine/src/Runtime/DotNetLib/: CMakeLists.txt  DotNetLibManager.cpp  DotNetLibManager.h  DotNetLib_API.h  nativehost.cpp
ReEngine/src/Runtime/GlobalAssets/: AssetsClassDefine.h  CMakeLists.txt  CommonExt.h  GlobalAssets_API.h  ResourceManager.h  ResourcesManager.cpp
ReEngine/src/Runtime/ImGuiLib/: CMakeLists.txt  ImGUILib_API.h  ImGuiTransfer.cpp  ImGuiTransfer.h
ReEngine/src/Runtime/InputSystem/: CMakeLists.txt  IInput.h  InputLayer.cpp  InputLayer.h  InputSystem.cpp  InputSystem.h  InputSystem_API.h
ReEngine/src/Runtime/OpenGL/: CMakeLists.txt  GlfwContext.cpp  GlfwContext.h  OpenGL.h  ReOpenGL_API.h
ReEngine/src/Runtime/RHI/: CMakeLists.txt  IFrameBuffer.h  IIndexBuffer.h  IRHIResources.h  IRenderContext.cpp  IRenderContext.h  IRenderDevice.cpp  IRenderDevice.h  IShader.h  ITexture.cpp  ITexture.h  IVertexArrayObject.h  IVertexBuffer.h  IVertexBufferLayout.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RHI_API.h  RenderTexture.cpp  RenderTexture.h
ReEngine/src/Runtime/RenderPipeline/: CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Image.h  Lighting.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderContext.cpp  RenderContext.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipeline_API.h  RenderTexture.cpp  RenderTexture.h
ReEngine/src/Runtime/Serialization/: CMakeLists.txt  Serialization_API.h
ReEngine/src/Runtime/ShaderLab/: CMakeLists.txt  Properties.h  ShaderLab.cpp  ShaderLab.h  ShaderLab_API.h  SubShader.cpp  SubShader.h
ReEngine/src/Runtime/Template/: CMakeLists.txt  ClassInfo.h  ClassType.h  MacroMisc.h  Singleton.h
ReEngine/src/Runtime/World/: BaseObject.cpp  BaseObject.h  Behavior.cpp  Behavior.h  CMakeLists.txt  Component.cpp  Component.h  DotNetBehavior.cpp  DotNetBehavior.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  World.cpp  World.h  World_API.h  Worldd-symbols.cpp
ReEngine/src/Shader/Default/: TestDraw.frag.glsl  TestDraw.vert.glsl  Unlit.frag.glsl  Unlit.vert.glsl
ReEngine/src/Tests/TestApp/: CMakeLists.txt  main.cpp
ReEngine/src/Tests/TestDll/: CMakeLists.txt  TestDlld-symbols.cpp
ReEngine/src/Tests/TestDotNetHosting/: CMakeLists.txt
ReEngine/src/Tests/TestJson/: CMakeLists.txt  main.cpp
ReEngine/src/Tests/TestLua/: CMakeLists.txt  main.cpp
ReEngine/src/Tests/TestReflection/: CMakeLists.txt  Foo.h  Foo.reflected.h  main.cpp
ReEngine/src/Tests/TestSomething/: CMakeLists.txt  TestAssimp.cpp  TestAssimp.h  main.cpp
ReEngine/tests/TestDll/: Add.cpp  Add.h  TestDll_API.h
ReEngine/tests/TestDotNetHosting/: nativehost.cpp
ReEngine/tests/TestJson/: main.cpp
ReEngine/tests/TestLua/: main.cpp
ReEngine/tests/TestReflection/: Foo.cpp
ReEngine/tests/TestSomething/: main.cpp
ReEngine/tests/TestWin32/: CMakeLists.txt  main.cpp
ReEngine/tests/TestYAML/: CMakeLists.txt  main.cpp
ReEngine/tools/: .gitattributes  ExportAPI.bat  native_config.json
ReEngine/tools/DotNetExporter/: DotNetExporter.sln
SimpleRenderer/: .gitignore  CMakeLists.txt  MakeVSProject.bat
SimpleRenderer/Source/: CMakeLists.txt  SimpleRenderer.Project.cs
SimpleRenderer/Source/Runtime/: CMakeLists.txt  Runtime.Build.cs
(+846 files in other folders)
